policies/gatekeeper/templates/no-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snohostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sNoHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snohostnetwork
        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := sprintf("[PCI-Req1.3.1/NIS2-Art21a] hostNetwork not allowed in CDE: %v", [input.review.object.metadata.name])
        }
