policies/gatekeeper/templates/no-run-as-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snorunasroot
spec:
  crd:
    spec:
      names:
        kind: K8sNoRunAsRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snorunasroot
        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          c.securityContext.runAsUser == 0
          msg := sprintf("[PCI-Req2.2.1/NIS2-Art21a] Container running as root (uid=0): %v", [c.name])
        }
